// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> align should render a center aligned button if align=center 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
  >
    <button
      class="Buttonweb__StyledButton-sc-18xf15a-0 kRiGXp Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 iWcLkq"
      data-testid="ds-button"
      type="button"
    >
      <div
        class="Textweb__Text-sc-1qrdpx3-0 gdNKCE"
        color="light.900"
        data-testid="ds-text"
      >
        Click Me
      </div>
    </button>
  </div>
</div>
`;

exports[`<Button /> align should render a left aligned button if align=left 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
  >
    <button
      class="Buttonweb__StyledButton-sc-18xf15a-0 kRiGXp Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 biKCWz"
      data-testid="ds-button"
      type="button"
    >
      <div
        class="Textweb__Text-sc-1qrdpx3-0 gdNKCE"
        color="light.900"
        data-testid="ds-text"
      >
        Click Me
      </div>
    </button>
  </div>
</div>
`;

exports[`<Button /> align should render a right aligned button if align=right 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
  >
    <button
      class="Buttonweb__StyledButton-sc-18xf15a-0 kRiGXp Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 eclYnY"
      data-testid="ds-button"
      type="button"
    >
      <div
        class="Textweb__Text-sc-1qrdpx3-0 gdNKCE"
        color="light.900"
        data-testid="ds-text"
      >
        Click Me
      </div>
    </button>
  </div>
</div>
`;

exports[`<Button /> block should render a block button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-18xf15a-0 hJAJDJ Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 fXsEZI"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-1qrdpx3-0 gdNKCE"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> disabled should render a disabled button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-18xf15a-0 kPEsrD Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 biKCWz"
    data-testid="ds-button"
    disabled=""
    type="button"
  >
    <div
      class="Textweb__Text-sc-1qrdpx3-0 bnCvli"
      color="light.950"
      data-testid="ds-text"
    >
      Disabled Button
    </div>
  </button>
</div>
`;

exports[`<Button /> focus should have focus when input is focused 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-18xf15a-0 kRiGXp Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 biKCWz"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-1qrdpx3-0 gdNKCE"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> icon with children with icon left should render a button with icon on left 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-18xf15a-0 kRiGXp Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 biKCWz"
    data-testid="ds-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="Spaceweb__Space-sc-1abqisc-0 fqjClE"
      data-testid="ds-icon"
      fill="rgba(255, 255, 255, 1.0)"
      focusable="false"
      height="20"
      testID="button-left-icon"
      viewBox="0 0 24 24"
      width="20"
    >
      <path
        d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
      />
    </svg>
    <div
      class="Textweb__Text-sc-1qrdpx3-0 gdNKCE"
      color="light.900"
      data-testid="ds-text"
    >
      Button
    </div>
  </button>
</div>
`;

exports[`<Button /> icon with children with icon right should render a button with icon on right 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-18xf15a-0 kRiGXp Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 biKCWz"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-1qrdpx3-0 gdNKCE"
      color="light.900"
      data-testid="ds-text"
    >
      Button
    </div>
    <svg
      aria-hidden="true"
      class="Spaceweb__Space-sc-1abqisc-0 jMloCk"
      data-testid="ds-icon"
      fill="rgba(255, 255, 255, 1.0)"
      focusable="false"
      height="20"
      testID="button-right-icon"
      viewBox="0 0 24 24"
      width="20"
    >
      <path
        d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Button /> icon without children should render icon only button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-18xf15a-0 kRiGXp Spaceweb__Space-sc-1abqisc-0 dFSRTN Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 biKCWz"
    data-testid="ds-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="Spaceweb__Space-sc-1abqisc-0 bnvEug"
      data-testid="ds-icon"
      fill="rgba(255, 255, 255, 1.0)"
      focusable="false"
      height="24"
      testID="button-left-icon"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Button /> size should render a large button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-18xf15a-0 kRiGXp Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 bcdMJc Flexweb__Flex-sc-1yhcoea-0 biKCWz"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-1qrdpx3-0 gdNKCE"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> size should render a medium(default) button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-18xf15a-0 kRiGXp Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 biKCWz"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-1qrdpx3-0 gdNKCE"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> size should render a small button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-18xf15a-0 kRiGXp Spaceweb__Space-sc-1abqisc-0 eLwos Sizeweb__Size-sc-1e5yf1-0 bohIbC Flexweb__Flex-sc-1yhcoea-0 biKCWz"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-1qrdpx3-0 swjPF"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> size should render a xsmall button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-18xf15a-0 kRiGXp Spaceweb__Space-sc-1abqisc-0 kCHaiv Sizeweb__Size-sc-1e5yf1-0 dmNVka Flexweb__Flex-sc-1yhcoea-0 biKCWz"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-1qrdpx3-0 UYvBQ"
      color="light.900"
      data-testid="ds-text"
    >
      CLICK ME
    </div>
  </button>
</div>
`;

exports[`<Button /> variant should render a primary(default) button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-18xf15a-0 kRiGXp Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 biKCWz"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-1qrdpx3-0 gdNKCE"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> variant should render a secondary button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-18xf15a-0 iUdSet Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 biKCWz"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-1qrdpx3-0 jdtvMv"
      color="primary.800"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> variant should render a tertiary button 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-18xf15a-0 gWyNL Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 biKCWz"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-1qrdpx3-0 jdtvMv"
      color="primary.800"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;

exports[`<Button /> variantColor should render a primary button based on provided variantColor 1`] = `
<div>
  <button
    class="Buttonweb__StyledButton-sc-18xf15a-0 ePjOGE Spaceweb__Space-sc-1abqisc-0 dBqoYd Sizeweb__Size-sc-1e5yf1-0 jdvRfl Flexweb__Flex-sc-1yhcoea-0 biKCWz"
    data-testid="ds-button"
    type="button"
  >
    <div
      class="Textweb__Text-sc-1qrdpx3-0 gdNKCE"
      color="light.900"
      data-testid="ds-text"
    >
      Click Me
    </div>
  </button>
</div>
`;
